skills card tablet overflow fix

--- a/css/experience.css
+++ b/css/experience.css
@@ -236,7 +236,6 @@ header{
         width: 87%;
         margin: 0 auto;
     }
-    
     .world-impact-container{
         flex-direction: row;
         text-align: left;
@@ -266,11 +265,7 @@ header{
 
 @media(min-width: 960px){
     .skill-card{
-        width: max-content;
         font-size: 15px;
-    }
-    .skills-needed{
-        grid-template-columns: repeat(5, 1fr);
     }
     .skills-section img{
         display: block;
@@ -281,9 +276,6 @@ header{
     }
     .curve-cont{
         position: relative;
-    }
-    .talents-workplace{
-        grid-template-columns: repeat(8, 1fr);
     }
 }
 
@@ -306,13 +298,17 @@ header{
     min-height: 100vh;
 }
 .skill-card{
-    width: max-content;
     font-size: 16px;
 }
 }
 
 @media(min-width: 1200px){
-
+    .skill-card{
+        width: max-content;
+    }
+    .skills-needed{
+        grid-template-columns: repeat(5, 1fr);
+    }
     .skills-needed{
         grid-template-columns: repeat(6, 1fr);
     }
